--- a/example4-Component/package.json
+++ b/example4-Component/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "serve": "node node_modules/webpack-dev-server/bin/webpack-dev-server.js --content-base app/root",
     "build": "node node_modules/webpack/bin/webpack.js",
-    "build:prod": "export NODE_ENV=production && node node_modules/webpack/bin/webpack.js && zip -r dist.zip dist/"
+    "build:prod": "set NODE_ENV=production&& node node_modules/webpack/bin/webpack.js && zip -r dist.zip dist/"
   },
   "author": "jbpetit@excilys.com",
   "license": "MIT",
@@ -17,11 +17,11 @@
     "babel-preset-react": "^6.24.1",
     "eslint": "^3.19.0",
     "eslint-loader": "^1.7.1",
-    "eslint-plugin-react": "^5.2.2",
+    "eslint-plugin-react": "^6.10.3",
     "json-loader": "^0.5.4",
     "transfer-webpack-plugin": "^0.1.4",
     "uglify-loader": "^2.0.0",
-    "webpack": "^2.4.1",
+    "webpack": "^2.3.3",
     "webpack-dev-server": "^2.4.2"
   },
   "dependencies": {
