--- a/example2-SeriousWebpack/package.json
+++ b/example2-SeriousWebpack/package.json
@@ -1,17 +1,29 @@
 {
-  "name": "example1-environement",
+  "name": "example2-seriouswebpack",
   "version": "1.0.0",
   "description": "intall environement exercice",
   "main": "index.js",
   "scripts": {
-    "serve": "node node_modules/webpack-dev-server/bin/webpack-dev-server.js --content-base app/root",
-    "build": "node node_modules/webpack/bin/webpack.js"
+    "serve": "./node_modules/.bin/webpack-dev-server --content-base app/root",
+    "build": "rm -rf dist && ./node_modules/.bin/webpack",
+    "build:prod": "rm -rf dist && export NODE_ENV=production ./node_modules/.bin/webpack && zip -r dist.zip dist/"
   },
   "author": "jbpetit@excilys.com",
   "license": "MIT",
   "devDependencies": {
+    "babel-core": "^6.24.1",
+    "babel-loader": "^6.4.1",
+    "babel-preset-es2015": "^6.24.1",
+    "eslint": "^3.19.0",
+    "eslint-loader": "^1.7.1",
+    "eslint-plugin-react": "^6.10.3",
+    "json-loader": "^0.5.4",
     "transfer-webpack-plugin": "^0.1.4",
+    "uglify-loader": "^2.0.0",
     "webpack": "^2.3.3",
     "webpack-dev-server": "^2.4.2"
+  },
+  "dependencies": {
+    "lodash": "^4.17.4"
   }
 }
