--- a/example3-HelloWorld/package.json
+++ b/example3-HelloWorld/package.json
@@ -16,13 +16,15 @@
     "babel-preset-es2015": "^6.24.1",
     "eslint": "^3.19.0",
     "eslint-loader": "^1.7.1",
+    "eslint-plugin-react": "^6.10.3",
     "json-loader": "^0.5.4",
     "transfer-webpack-plugin": "^0.1.4",
     "uglify-loader": "^2.0.0",
-    "webpack": "^2.4.1",
+    "webpack": "^2.3.3",
     "webpack-dev-server": "^2.4.2"
   },
   "dependencies": {
-    "lodash": "^4.17.4"
+    "react": "^15.5.4",
+    "react-dom": "^15.5.4"
   }
 }
