--- a/example3-HelloWorld/.eslintrc.json
+++ b/example3-HelloWorld/.eslintrc.json
@@ -28,5 +28,12 @@
       "error",
       "always"
     ]
-  }
+  },
+
+  "plugins": [
+    "react"
+  ]
+,
+  "extends": ["eslint:recommended", "plugin:react/recommended"]
+
 }
