--- a/example2-SeriousWebpack/package.json
+++ b/example2-SeriousWebpack/package.json
@@ -5,13 +5,24 @@
   "main": "index.js",
   "scripts": {
     "serve": "node node_modules/webpack-dev-server/bin/webpack-dev-server.js --content-base app/root",
-    "build": "node node_modules/webpack/bin/webpack.js"
+    "build": "node node_modules/webpack/bin/webpack.js",
+    "build:prod": "NODE_ENV=production; export NODE_ENV; node ./node_modules/webpack/bin/webpack.js && zip -r dist.zip dist"
   },
   "author": "jbpetit@excilys.com",
   "license": "MIT",
   "devDependencies": {
+    "babel-core": "^6.25.0",
+    "babel-loader": "^7.0.0",
+    "babel-preset-env": "^1.5.2",
+    "babel-preset-es2015": "^6.24.1",
+    "eslint": "^4.0.0",
+    "eslint-loader": "^1.8.0",
+    "eslint-plugin-react": "^7.1.0",
+    "lodash": "^4.17.4",
     "transfer-webpack-plugin": "^0.1.4",
-    "webpack": "^2.3.3",
-    "webpack-dev-server": "^2.4.2"
-  }
+    "uglify-loader": "^2.0.0",
+    "webpack": "^2.6.1",
+    "webpack-dev-server": "^2.4.5"
+  },
+  "dependencies": {}
 }
