--- a/example3-HelloWorld/package.json
+++ b/example3-HelloWorld/package.json
@@ -11,16 +11,21 @@
   "author": "jbpetit@excilys.com",
   "license": "MIT",
   "devDependencies": {
-    "babel-core": "^6.24.1",
+    "babel-core": "^6.25.0",
     "babel-loader": "^6.4.1",
+    "babel-preset-env": "^1.5.2",
     "babel-preset-es2015": "^6.24.1",
+    "babel-preset-react": "^6.24.1",
     "eslint": "^3.19.0",
-    "eslint-loader": "^1.7.1",
+    "eslint-loader": "^1.8.0",
+    "eslint-plugin-react": "^7.1.0",
     "json-loader": "^0.5.4",
+    "react": "^15.6.1",
+    "react-dom": "^15.6.1",
     "transfer-webpack-plugin": "^0.1.4",
     "uglify-loader": "^2.0.0",
-    "webpack": "^2.4.1",
-    "webpack-dev-server": "^2.4.2"
+    "webpack": "^2.6.1",
+    "webpack-dev-server": "^2.4.5"
   },
   "dependencies": {
     "lodash": "^4.17.4"
